--- a/02_TensorRT/03_CPP/src/log4cplus.properties
+++ b/02_TensorRT/03_CPP/src/log4cplus.properties
@@ -5,8 +5,8 @@ log4cplus.rootLogger=TRACE, DEBUG_MSGS, ERROR_MSGS, WARN_MSGS
 ################################DEBUG####################################
 
 #设置日志追加到文件尾
-#log4cplus.appender.DEBUG_MSGS=log4cplus::RollingFileAppender
-log4cplus.appender.DEBUG_MSGS=log4cplus::DailyRollingFileAppender
+log4cplus.appender.DEBUG_MSGS=log4cplus::RollingFileAppender
+# log4cplus.appender.DEBUG_MSGS=log4cplus::DailyRollingFileAppender
 log4cplus.appender.DEBUG_MSGS.Schedule=MINUTELY
 
 #设置日志文件大小
